# adaptiveBKAlgo

./: README.md  bk_full_sweep_results.csv  complex_test.txt  notes.ipynb  notes_prev.ipynb  presentation.ipynb
orginal/: CMakeLists.txt  Makefike  Makefile  benchmark.py  benchmark.sh  bk_adj_maximal_cliques.txt  bk_algorithm  bk_debug  bk_pivot_maximal_cliques.txt  bk_test  cleaning.txt  complex_test.txt  core  main.cpp  presentation.ipynb  profile_compare.sh  profile_drill.py  reference_simple.cpp  results.txt  run_all.sh  run_benchmark.sh  run_compare.sh  run_hitset_limits.sh  run_method_sweep.sh  run_per_graph.sh  run_per_graph_results.txt  run_rules_analysis.sh  simple_adaptive_final.cpp  test_comparison.py  test_graph.txt
orginal/data/: owner_trace.txt  test1.txt  test10.txt  test11.txt  test3.txt  test8.txt  test9.txt
orginal/inc/: common.h  graph.h  helpers.h
orginal/logs/: benchmark_20260402_170107.tsv  data.tsv  data.xlsx
orginal/logs_all/: benchmark_20260404_014251.tsv
orginal/logs_all2/: benchmark_20260404_014315.tsv
orginal/logs_all3/: benchmark_20260404_014333.tsv
orginal/logs_all4/: benchmark_20260404_014357.tsv
orginal/logs_final/: benchmark_20260404_013924.tsv
orginal/logs_final2/: benchmark_20260404_014415.tsv
orginal/logs_local/: benchmark_20260404_014808.tsv
orginal/logs_opt/: benchmark_20260404_020206.tsv
orginal/logs_opt2/: benchmark_20260404_020239.tsv
orginal/logs_test/: benchmark_20260402_175613.tsv  benchmark_20260402_180117.tsv
orginal/logs_test2/: benchmark_20260402_180129.tsv
orginal/src/: common.cpp  graph.cpp  (+1 more)
(+134 files in other folders)
